# nametag-generator

./: .gitignore  CHANGELOG.md  LICENSE  README.ko.md  README.md  generate_nametag_pdf.py  pyproject.toml  requirements.txt
api/: index.py
sample/: attendees.sample.xlsx
src/nametag_generator/: __init__.py  __main__.py  cli.py  config.py  errors.py  models.py  service.py  web.py  web_content.py
src/nametag_generator/loaders/: __init__.py  xlsx.py
src/nametag_generator/render/: __init__.py  cards.py  fonts.py  layout.py  pdf.py
src/nametag_generator/themes/: default.py
tests/: test_cli.py  test_layout.py  test_loader.py  test_render_smoke.py  test_web_ui.py
ui/: README.md
